<?xml version="1.0"?>
<package format="2">
  <name>iiwa_registration</name>
    <version>0.0.1</version>
  <description>A package to register the current cartesian pose of the endeffector and the robot joint positions when a defined SmartPad-toolbar button is pushed.</description>

  <author email="lauramaria.bielenberg@stud.tu-darmstadt.de">Laura Bielenberg</author>
  <maintainer email="lauramaria.bielenberg@stud.tu-darmstadt.de">Laura Bielenberg</maintainer>

  <license>BSD</license>


<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>iiwa_msgs</build_depend>

  <exec_depend>roscpp</exec_depend> 
  <exec_depend>rospy</exec_depend> 
  <exec_depend>std_msgs</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>iiwa_msgs</exec_depend>
  
</package>
