<?xml version="1.0"?>
<package format="2">
  <name>iiwa_registration</name>
    <version>0.0.1</version>
  <description>A package to register the current cartesian pose of the endeffector and the robot joint positions when a defined SmartPad-toolbar button is pushed.</description>

  <author email="lauramaria.bielenberg@stud.tu-darmstadt.de">Laura Bielenberg</author>
  <maintainer email="lauramaria.bielenberg@stud.tu-darmstadt.de">Laura Bielenberg</maintainer>

  <license>BSD</license>


<buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>iiwa_description</build_depend>
  <build_depend>iiwa_moveit</build_depend>
  <build_depend>iiwa_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>iimoveit</build_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>iiwa_description</build_export_depend>
  <build_export_depend>iiwa_moveit</build_export_depend>
  <build_export_depend>iiwa_msgs</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend> 
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>moveit_visual_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosmsg</build_export_depend>
  <build_export_depend>iimoveit</build_export_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>iiwa_description</exec_depend>
  <exec_depend>iiwa_moveit</exec_depend>
  <exec_depend>iiwa_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosmsg</exec_depend>
  <exec_depend>iimoveit</exec_depend>
  
</package>


